adjust edit but no image

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -153,3 +153,32 @@ div#masonry img {
   transition: 0.5s;
 }
 
+.card {
+  
+    margin: auto; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+}
+
+.card-header {
+    text-align: center;
+    background-color: #f8f9fa; 
+    border-bottom: 1px solid #e0e0e0; 
+    padding: 1rem 1rem; 
+    font-size: 1.25rem; 
+    font-weight: 500; 
+}
+
+.card-body {
+    padding: 1rem; 
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form label {
+    display: block;
+    margin-bottom: 0.5rem; 
+}
