--- a/templates/artwork/_form.html.twig
+++ b/templates/artwork/_form.html.twig
@@ -1,4 +1,35 @@
+{# templates/artwork/_form.html.twig #}
+
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="mb-3">
+	{{ form_label(form.name) }}
+	{{ form_widget(form.name, {'attr': {'class': 'form-control'}}) }}
+	{{ form_errors(form.name) }}
+</div>
+
+<div class="mb-3">
+	{{ form_label(form.posterFile) }}
+	{{ form_widget(form.posterFile, {'attr': {'class': 'form-control'}}) }}
+	{{ form_errors(form.posterFile) }}
+</div>
+
+<div class="mb-3">
+	{{ form_label(form.description) }}
+	{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+	{{ form_errors(form.description) }}
+</div>
+
+<div class="mb-3">
+	{{ form_label(form.category) }}
+	{{ form_widget(form.category, {'attr': {'class': 'form-select'}}) }}
+	{{ form_errors(form.category) }}
+</div>
+
+<div class="mb-3">
+	{{ form_label(form.user) }}
+	{{ form_widget(form.user, {'attr': {'class': 'form-select'}}) }}
+	{{ form_errors(form.user) }}
+</div>
+
+<button type="submit" class="btn btn-primary">{{ button_label }}</button>
 {{ form_end(form) }}
